artifacts/surface_code_timing/H4_gr_4th_new2_ftqc_compile_20260416_173221.log
  File "<string>", line 1
    import importlib, time, traceback; from trotterlib import cost_extrapolation as ce; print(f"[job] start={time.strftime("%Y-%m-%dT%H:%M:%S%z")}", flush=True); start=time.time(); importlib.reload(ce); ce.SURFACE_CODE_COMPILE_MODE="ftqc_compile"; 
                                                                                                                            ^
SyntaxError: f-string: unmatched '('
